<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/upload_scroll"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".upload_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/top_back_main">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/upload_data_to_database"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/sample_pic"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_sample_pic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_sample_name"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sample_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_sample_location"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sample_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_reflected_voltage"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reflected_voltage_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_ifrared"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ifrared_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/enter_the_moisture"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/moisture_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Sodium"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sodium_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Magnesium"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/magnesium_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Calcium"
            android:textColorHint="#707072">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calcium_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/upload_data"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="#CE7F43"
                android:fontFamily="@font/montserrat"
                android:text="@string/upload"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp">

            </Button>

            <Button
                android:id="@+id/capture_photo"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#6F2E5E"
                android:fontFamily="@font/montserrat"
                android:text="@string/capture_photo"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp">

            </Button>

        </LinearLayout>
    </LinearLayout>


</ScrollView>