<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linear_mineral"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reflect_predict_water">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/top_back_main">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="Reflection Cofficient / Water is the medium "
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Enter the Reflection Cofficient"
        android:textColorHint="#707072">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/impedance_value_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="horizontal">

        <Button
            android:id="@+id/predict_water"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="#CE7F43"
            android:fontFamily="@font/montserrat"
            android:text="@string/predict"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold"
            app:cornerRadius="15dp">

        </Button>

        <Button
            android:id="@+id/refresh_water"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#6F2E5E"
            android:fontFamily="@font/montserrat"
            android:text="@string/refresh"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold"
            app:cornerRadius="15dp">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/processing_water"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/progress_text_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/please_wait_processing"
            android:textColor="#000"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>


    <TextView
        android:id="@+id/result_mineral_water"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="#85BAA1E7"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/enter_data_to_load"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textSize="25sp" />


</LinearLayout>