<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_scroll"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/top_back_main">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/mineral_predictor"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/measure_sensor_data"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/mineral_predict" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="Sensor Reading"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/upload"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_upload" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/upload_sample"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/database"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_database_svgrepo_com" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/samples_collected"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/procedure_exp"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_stored_procedures" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/procedure"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/mieral_estimate"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/estimate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="Mineral Estimate"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_us"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:backgroundTint="#E2E2DE"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/about_us" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/about_app"
                    android:textAllCaps="true"
                    android:textColor="#000" />
            </androidx.cardview.widget.CardView>


        </GridLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/minerl_predict"
            android:layout_gravity="center"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:backgroundTint="#E2E2DE"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/mineral_predict" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/mineral_predict"
                android:textAllCaps="true"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>


</ScrollView>